Fixed issue with overlapping components on restaurant details page

--- a/css/styles.css
+++ b/css/styles.css
@@ -215,7 +215,7 @@ nav h1 a {
   position: fixed;
   top: 0;
   width: 100%;
-  /*z-index: 1000;*/
+  z-index: 1000;
 }
 
 .inside #map-container {
@@ -272,13 +272,17 @@ nav h1 a {
 	width: 100%;
 }
 
-#restaurant-container, #reviews-container {
+#restaurant-container{
+  width: 45%;
+  padding: 150px 2.5% 0 2.5%;
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
 }
 
+
 #reviews-container {
-  padding: 30px 40px 80px;
+  width: 45%;
+  padding: 2.5%;
 }
 
 #reviews-container h2 {
